--- a/joão pedro.index.html
+++ b/joão pedro.index.html
@@ -1,1 +1,17 @@
 criando meu primeiro arquivo 
+header {
+    background: #BBBBBB;
+}
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
